companyweb/force-app/main/default/objects/CW_Login_Setup__mdt.object
<CustomObject>
    <label>Login Setup</label>
    <pluralLabel>Login Setups</pluralLabel>
</CustomObject>