companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_Joint_Commitees_White_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Joint_Commitees_White_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Joint Committees White Collar field on the Account object.
This mapping accepts Long Text Area fields only.</inlineHelpText>
    <label>Account Joint Commitees White Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>