companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_Legal_Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Form_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Legal Form field on the Account object.
This mapping accepts Picklist fields only.</inlineHelpText>
    <label>Account Legal Form Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>