companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_Main_Activity_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Main_Activity_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Main Activity field on the Account object.
This mapping accepts Text and Long Text Area fields only.</inlineHelpText>
    <label>Account Main Activity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>