companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_PostalCode_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_PostalCode_Field__c</fullName>
    <label>Account PostalCode Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>