companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_Score_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Score_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Company Web Score field on the Account object.
This mapping accepts Number fields only.</inlineHelpText>
    <label>Account Score Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>