companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Account_VAT_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_VAT_Number_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing VAT Number field on the Account object.
This mapping accepts Text and Long Text Area fields only.</inlineHelpText>
    <label>Account VAT Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>