companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_CompanyWebLogin__c.field-meta.xml
<CustomField>
    <fullName>CW_CompanyWebLogin__c</fullName>
    <label>CompanyWebLogin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>