companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_CompanyWebPassword__c.field-meta.xml
<CustomField>
    <fullName>CW_CompanyWebPassword__c</fullName>
    <label>CompanyWebPassword</label>
    <length>30</length>
    <type>Text</type>
</CustomField>