companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_CompanyWebSecret__c.field-meta.xml
<CustomField>
    <fullName>CW_CompanyWebSecret__c</fullName>
    <label>CompanyWebSecret</label>
    <length>250</length>
    <type>Text</type>
</CustomField>