companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_Duplicate_Check_Creation__c.field-meta.xml
<CustomField>
    <fullName>CW_Duplicate_Check_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable/disable the VAT duplication rule on record creation</inlineHelpText>
    <label>Duplicate Check on Creation</label>
    <type>Checkbox</type>
</CustomField>