companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_Duplicate_Check_Refresh__c.field-meta.xml
<CustomField>
    <fullName>CW_Duplicate_Check_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable/disable the VAT duplication rule on record refresh</inlineHelpText>
    <label>Duplicate Check on Refresh</label>
    <type>Checkbox</type>
</CustomField>