companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/CW_ServiceIntegrator__c.field-meta.xml
<CustomField>
    <fullName>CW_ServiceIntegrator__c</fullName>
    <label>ServiceIntegrator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>