companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Lead_Credit_Limit_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Credit_Limit_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Credit Limit field on the Lead object.
This mapping accepts Number fields only.</inlineHelpText>
    <label>Lead Credit Limit Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>