companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Lead_Main_Activity_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Main_Activity_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Main Activity field on the Lead object.
This mapping accepts Text and Long Text Area fields only.</inlineHelpText>
    <label>Lead Main Activity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>