companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Lead_Number_Employees_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number_Employees_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Number of Employees field on the Lead object.
This mapping accepts Number fields only.</inlineHelpText>
    <label>Lead Number Employees Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>