companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Lead_Social_Security_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Social_Security_Field__c</fullName>
    <inlineHelpText>Please, provide the API name of the existing Social Security Number field on the Lead object.
This mapping accepts Text and Long Text Area fields only.</inlineHelpText>
    <label>Lead Social Security Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>