companyweb/force-app/main/default/objects/CW_Login_Setup__mdt/fields/Lead_Street_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Street_Field__c</fullName>
    <label>Lead Street Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>